--- a/src/app/components/shared/popUp/log-out/log-out.component.html
+++ b/src/app/components/shared/popUp/log-out/log-out.component.html
@@ -24,7 +24,7 @@
     </div>
 
 
-    <div (click)="localStorageS.remove('currentUser'); logOut(); overlayService.logoutOvelay();" routerLink=""
+    <div (click)="localStorageS.remove('currentUser'); logOut(); overlayService.logoutOvelay();"
       class="flex items-center gap-4 py-2 px-7 h-[50%] rounded-[100px] hover:bg-primary cursor-pointer hover:text-purple3 duration-200 hover:scale-[1.05] active:scale-[0.9]">
       <img src="/assets/icons/logout.svg" alt="" />
       <span>Log out</span>
