Fix: Nav and main page mid screen.

--- a/src/app/components/shared/header/header.component.html
+++ b/src/app/components/shared/header/header.component.html
@@ -22,7 +22,7 @@
     }
   </div>
 
-  <app-search class="w-[50%] hidden lg:block self-end"></app-search>
+  <app-search class="w-[50%] hidden md:block self-end"></app-search>
 
   <img src="{{ usersService.currentUser.avatar }}" (click)="overlayService.logoutOvelay()"
     class="size-[50px] md:size-[70px] rounded-full cursor-pointer hover:scale-[1.1] duration-150"
