--- a/src/app/components/shared/popUp/add-channel/add-channel.component.html
+++ b/src/app/components/shared/popUp/add-channel/add-channel.component.html
@@ -7,7 +7,7 @@
     <h2 class="text-2xl font-bold">Channel erstellen</h2>
 
     <img (click)="closeChannelCreationDialog()" class="hover:scale-[1.1] duration-150 active:scale-[0.9] cursor-pointer"
-      src="/assets/icons/close.svg" alt="" />
+      src="assets/icons/close.svg" alt="" />
   </div>
 
   <p>
