--- a/src/app/components/shared/popUp/add-members/add-members.component.html
+++ b/src/app/components/shared/popUp/add-members/add-members.component.html
@@ -4,7 +4,7 @@
     <div class="flex justify-between text-2xl font-bold">
         <h2>Leute hinzufügen</h2>
         <img (click)="overlayService.addMembersOverlay()" class="cursor-pointer hover:scale-[1.1] duration-150"
-            src="/assets/icons/close.svg" alt="">
+            src="assets/icons/close.svg" alt="">
     </div>
 
     @if (currentChannelName) {
