--- a/src/app/components/shared/popUp/add-user/add-user.component.html
+++ b/src/app/components/shared/popUp/add-user/add-user.component.html
@@ -3,7 +3,7 @@
     <div class="flex justify-between">
         <span class="text-2xl font-bold">Leute hinzufügen</span>
         <img (click)="overlayService.addUserOverlay()"
-            class="cursor-pointer hover:scale-[1.2] duration-200 active:scale-[0.9]" src="/assets/icons/close.svg"
+            class="cursor-pointer hover:scale-[1.2] duration-200 active:scale-[0.9]" src="assets/icons/close.svg"
             alt="">
     </div>
 
