--- a/src/app/components/shared/popUp/edit-channel/edit-channel.component.html
+++ b/src/app/components/shared/popUp/edit-channel/edit-channel.component.html
@@ -4,7 +4,7 @@
         @if (channelService.channels.length > 0) {
             <h2># {{channelService.channels[channelService.selectedChannelIndex()].name}}</h2>
         }
-        <img (click)="overlayService.editChannel()" class="hover:scale-[1.1] cursor-pointer duration-150" src="/assets/icons/close.svg" alt="">
+        <img (click)="overlayService.editChannel()" class="hover:scale-[1.1] cursor-pointer duration-150" src="assets/icons/close.svg" alt="">
     </div>
 
     <div
