--- a/src/app/components/shared/popUp/edit-channel/edit-description/edit-description.component.html
+++ b/src/app/components/shared/popUp/edit-channel/edit-description/edit-description.component.html
@@ -7,7 +7,7 @@
         } @else {
         <button class="hidden sm:block text-purple3" (click)="editDescription()">Bearbeiten</button>
         <img (click)="editDescription()" class="sm:hidden cursor-pointer hover:scale-[1.1] duration-150"
-            src="/assets/icons/edit.svg" alt="">
+            src="assets/icons/edit.svg" alt="">
         }
     </div>
     @if(edit){
