--- a/src/app/components/shared/popUp/members/members.component.html
+++ b/src/app/components/shared/popUp/members/members.component.html
@@ -4,7 +4,7 @@
         <h2 class="text-2xl font-bold">Mitglieder</h2>
 
         <img (click)="overlayService.membersOverlay()"
-            class="cursor-pointer hover:scale-[1.2] active:scale-[0.9] duration-200" src="/assets/icons/close.svg"
+            class="cursor-pointer hover:scale-[1.2] active:scale-[0.9] duration-200" src="assets/icons/close.svg"
             alt="">
     </div>
 
@@ -18,7 +18,7 @@
 
     <button (click)="overlayService.addMembersOverlay();overlayService.membersOverlay()"
         class="flex items-center gap-4 py-1  cursor-pointer h-14 px-7 rounded-[30px] hover:bg-primary mx-5 hover:scale-[1.1] duration-200 shadow-md active:scale-[0.9]">
-        <img src="/assets/icons/person_add.svg" alt="">
+        <img src="assets/icons/person_add.svg" alt="">
         <span>
             Mitglieder hinzufüngen
         </span>
