--- a/src/app/components/navigation/channels/channels.component.html
+++ b/src/app/components/navigation/channels/channels.component.html
@@ -2,14 +2,14 @@
 
     <div class="flex items-center justify-between w-full h-12 px-2">
         <button (click)="turnCannelArrow()" class="flex items-center gap-3 py-3">
-            <img class="size-8" id="channel-arrow" src="/assets/icons/arrow_drop_down.svg" alt="">
+            <img class="size-8" id="channel-arrow" src="assets/icons/arrow_drop_down.svg" alt="">
             <div class="flex gap-2 text-xl font-bold">
-                <img class="size-6" src="/assets/icons/workspaces.svg" alt="">
+                <img class="size-6" src="assets/icons/workspaces.svg" alt="">
                 Channels
             </div>
         </button>
         <img (click)="overlayService.addCannelOverlay()"
-            class="cursor-pointer size-8 hover:scale-[1.1] duration-150 active:scale-[0.9]" src="/assets/icons/add.svg"
+            class="cursor-pointer size-8 hover:scale-[1.1] duration-150 active:scale-[0.9]" src="assets/icons/add.svg"
             alt="">
     </div>
 
@@ -28,7 +28,7 @@
         }
         <li (click)="overlayService.addCannelOverlay()"
             class="flex gap-3 py-3 cursor-pointer hover:text-purple3 pl-7 hover:font-bold">
-            <img src="/assets/icons/add_circle.svg" alt="">
+            <img src="assets/icons/add_circle.svg" alt="">
             Channel hinzufügen
         </li>
 
