--- a/src/app/components/privacy-policy-page/privacy-policy-page.component.html
+++ b/src/app/components/privacy-policy-page/privacy-policy-page.component.html
@@ -1,6 +1,6 @@
 <section class="flex items-center justify-center w-full h-screen bg-primary">
   <div class="bg-white min-h-[470px] rounded-[30px] shadow-md py-12 px-14 flex flex-col gap-8">
-    <img (click)="goBack()" class="size-10 hover:scale-[1.1] cursor-pointer duration-150" src="/assets/icons/back.svg"
+    <img (click)="goBack()" class="size-10 hover:scale-[1.1] cursor-pointer duration-150" src="assets/icons/back.svg"
       alt="" />
 
     <div class="flex flex-col gap-4 h-[80vh] overflow-auto w-full text-center">
