--- a/src/app/components/shared/loading-screen/loading-screen.component.html
+++ b/src/app/components/shared/loading-screen/loading-screen.component.html
@@ -2,7 +2,7 @@
 
 
     <div class="absolute flex flex-col items-center gap-3 opacity-75 m pulse">
-        <img class="w-40" src="/assets/icons/Logo.svg" alt="">
+        <img class="w-40" src="assets/icons/Logo.svg" alt="">
         <h1 class="text-5xl font-bold">DA Bubble</h1>
     </div>
 
