--- a/src/app/components/shared/popUp/edit-channel/edit-name/edit-name.component.html
+++ b/src/app/components/shared/popUp/edit-channel/edit-name/edit-name.component.html
@@ -7,7 +7,7 @@
         } @else {
         <button class="hidden sm:block text-purple3" (click)="editName()">Bearbeiten</button>
         <img (click)="editName()" class="sm:hidden cursor-pointer hover:scale-[1.1] duration-150"
-            src="/assets/icons/edit.svg" alt="">
+            src="assets/icons/edit.svg" alt="">
         }
     </div>
 
