--- a/src/app/components/shared/popUp/profile/profile.component.html
+++ b/src/app/components/shared/popUp/profile/profile.component.html
@@ -3,7 +3,7 @@
   <div class="flex justify-between w-full">
     <span class="text-2xl font-bold">Profil</span>
     <img (click)="overlayService.profileOverlay(true, userService.currentUser)"
-      class="cursor-pointer hover:scale-[1.3] duration-200 active:scale-[0.9]" src="/assets/icons/close.svg" alt="" />
+      class="cursor-pointer hover:scale-[1.3] duration-200 active:scale-[0.9]" src="assets/icons/close.svg" alt="" />
   </div>
 
   <div class="flex justify-center w-full">
@@ -14,13 +14,13 @@
     @for (avatar of avatars; track avatar) {
     <img (click)="selectAvatar(avatar)"
       class="transition-all rounded-full cursor-pointer size-14 hover:ring-4 hover:ring-purple1"
-      [src]="'/assets/imgs/avatar' + avatar + '.svg'" alt="Avatar {{ avatar }}" />
+      [src]="'assets/imgs/avatar' + avatar + '.svg'" alt="Avatar {{ avatar }}" />
     }
   </div>
   } @if (overlayService.editProfil) {
   <div class="flex flex-col w-full gap-2">
     <div class="flex items-center gap-5 font-bold">
-      <img src="/assets/icons/account_circle.svg" alt="" />
+      <img src="assets/icons/account_circle.svg" alt="" />
 
       <p>Vollständiger Name</p>
     </div>
@@ -38,7 +38,7 @@
       @if (overlayService.usersProfilView) {} @else {
       <img
         class="max-[500px]:block cursor-pointer hidden hover:scale-[1.2] duration-200 active:scale-[0.9] w-[40px] h-[40px] rounded-[40px] p-[3px]"
-        (click)="overlayService.editProfileView()" src="/assets/icons/edit2.svg" alt="" />
+        (click)="overlayService.editProfileView()" src="assets/icons/edit2.svg" alt="" />
       <span [ngClass]="{'d-none': userService.currentUser.id === userService.GuestUser.id}"
         class="max-[500px]:hidden cursor-pointer hover:scale-[1.2] duration-200 active:scale-[0.9] p-[3px] gap-[0px] transition-all text-purple1 ease-out"
         (click)="overlayService.editProfileView()">Bearbeiten</span>
@@ -62,7 +62,7 @@
   </div>
 
   <div class="flex items-start gap-5">
-    <img src="/assets/icons/mail.svg" alt="" />
+    <img src="assets/icons/mail.svg" alt="" />
 
     <div class="flex flex-col">
       <span class="font-bold">E-Mail-Adresse</span>
@@ -75,7 +75,7 @@
   <div class="flex justify-center w-full">
     <button (click)="clickToDm(overlayService.profileObj)"
       class="flex text-white px-6 py-3 bg-purple1 rounded-[50px] gap-3 hover:scale-[1.2] duration-200 active:scale-[0.9]">
-      <img src="/assets/icons/mode_comment.svg" alt="" />
+      <img src="assets/icons/mode_comment.svg" alt="" />
       Nachricht
     </button>
   </div>
