--- a/src/app/components/landing-page/landing-page.component.html
+++ b/src/app/components/landing-page/landing-page.component.html
@@ -1,20 +1,9 @@
-<section class="flex flex-col items-center justify-center w-full min-h-screen bg-primary">
-
-
-
+<section class="flex flex-col items-center justify-center w-full h-screen max-h-screen bg-primary">
   @if (showSplash) {
   <app-splash-screen class="splash-screen"></app-splash-screen>
   }
 
-
-
-
-
-
-
-
-
-  <div class="flex flex-col gap-5 items-center justify-center min-h-[700px] w-full mt-[12%] mb-[5%]">
+  <div class="flex flex-col gap-5 items-center justify-center min-h-[700px] w-full">
 
     <img src="assets/imgs/icons/logo.svg" alt="Logo"
       class="md:absolute h-12 xs:h-14 md:h-16 lg:h-18 top-[5%] md:block md:top-4 md:left-4" />
@@ -35,8 +24,6 @@
     <app-resetpw-request class="flex items-center justify-center"></app-resetpw-request>
     }
 
-
-
     @if (landingService.landing() == 'login') {
     <div class="md:absolute bottom-[3%] flex-col gap-5 h-fit md:flex md:top-4 md:right-4">
       <p class="text-base text-black">Neu bei DABubble?</p>
@@ -48,10 +35,7 @@
     }
   </div>
 
-
-
-
-  <div class="absolute bottom-0 flex gap-32">
+  <div class="absolute flex gap-32 bottom-12">
     <button routerLink="legal"
       class="hover:scale-[1.1] active:scale-[0.9] duration-150 px-3 py-2 border opacity-[0.8] hover:opacity-[1] hover:border-textgray rounded-full text-purple1">Legal
       Notice
@@ -61,6 +45,4 @@
       Policy
     </button>
   </div>
-
-
 </section>
