--- a/src/app/components/landing-page/login/login.component.html
+++ b/src/app/components/landing-page/login/login.component.html
@@ -1,6 +1,6 @@
 <form
   class="relative min-w-[320px] flex flex-col items-center w-full gap-4 px-5 py-5 text-lg bg-white shadow-md sm:py-10 sm:gap-8 sm:px-10 sm:text-xl rounded-3xl"
-  (ngSubmit)="guestLogin()" #contactForm="ngForm">
+  (ngSubmit)="login()" #contactForm="ngForm">
 
 
   <h1 class="text-2xl font-bold xs:text-3xl sm:text-4xl text-purple1">
@@ -22,9 +22,7 @@
       [(ngModel)]="loginData.email" name="email" pattern="[a-zA-Z0-9._%+\-]+@[a-zA-Z0-9.\-]+\.[a-zA-Z]{2,}" required />
     @if(!email.valid && (email.touched || contactForm.submitted)){
     <span
-      class="shake-animation absolute w-full text-center text-base  sm:text-lg text-red-500 bottom-[-22px] sm:bottom-[-30px]">Pleace
-      enter
-      name</span>
+      class="shake-animation absolute w-full text-center text-base  sm:text-lg text-red-500 bottom-[-22px] sm:bottom-[-30px]">Bitte gültige E-Mail-Adresse eingeben.</span>
     }
   </div>
 
@@ -33,12 +31,12 @@
     class="flex relative items-center w-full max-w-[500px] bg-primary px-4 py-3 gap-2 rounded-[100px] input-container"
     [ngClass]="{'invalid': !password.valid && (password.touched || contactForm.submitted), 'valid': password.valid}">
     <img src="assets/imgs/icons/lock.svg" alt="Lock Icon" class="size-5" />
-    <input #password="ngModel" type="password" placeholder="Passwort"
+    <input #password="ngModel" type="password" placeholder="Passwort" minlength="6"
       class="flex-1 outline-none bg-primary" [(ngModel)]="loginData.password" name="password" required />
     @if(!password.valid && (password.touched || contactForm.submitted)){
     <span
       class="shake-animation absolute w-full text-center text-base  sm:text-lg text-red-500 bottom-[-22px] sm:bottom-[-30px]">
-      Pleace enter password
+      Bitte Passwort eingeben.
     </span>
     }
   </div>
@@ -67,12 +65,22 @@
 
 
   <div class="flex w-full gap-7">
-    <button type="submit"
-      class="flex-1 py-2 text-white rounded-full bg-purple1 hover:bg-purple3 hover:scale-[1.1] duration-150 active:scale-[0.9]">
-      Anmelden
-    </button>
+    @if (email.valid && password.valid) {
+      <button
+        type="submit"
+        class="flex-1 py-2 text-white rounded-full bg-purple1 hover:bg-purple3 hover:scale-[1.1] duration-150 active:scale-[0.9]">
+        Anmelden
+      </button>
+    } @else {
+      <button
+        disabled
+        type="submit"
+        class="flex-1 py-2 text-white rounded-full bg-textgray duration-150 active:scale-[0.9]">
+        Anmelden
+      </button>
+    }
 
-    <button (click)="guestLogin(true)" routerLink="main" type="button"
+    <button (click)="login(true)" routerLink="main" type="button"
       class="flex-1 py-2 border rounded-full border-purple1 text-purple1 hover:bg-primary hover:scale-[1.1] duration-150 active:scale-[0.9]">
       Gäste-Login
     </button>
