--- a/src/styles.scss
+++ b/src/styles.scss
@@ -11,6 +11,7 @@ body {
     width: 100%;
     max-height: 100vh;
     height: 100vh;
+    background-color: #ECEEFE;
     // overflow-y: hidden;
 }
 
