Feat: Add user feedback for wrong login data.

--- a/src/app/components/landing-page/login/login.component.html
+++ b/src/app/components/landing-page/login/login.component.html
@@ -38,7 +38,10 @@
       class="shake-animation absolute w-full text-center text-base  sm:text-lg text-red-500 bottom-[-22px] sm:bottom-[-30px]">
       Bitte Passwort eingeben.
     </span>
-    }
+    } 
+    <!-- @else if (!isLoginDataValid) { -->
+      <span class="shake-animation absolute w-full text-center text-base  sm:text-lg text-red-500 bottom-[-22px] sm:bottom-[-30px]">{{ error }}</span>
+    <!-- } -->
   </div>
 
 
