--- a/src/app/components/landing-page/register/register.component.html
+++ b/src/app/components/landing-page/register/register.component.html
@@ -38,7 +38,7 @@
       [(ngModel)]="registerData.email" name="email" required
       pattern="[a-zA-Z0-9._%+\-]+@[a-zA-Z0-9.\-]+\.[a-zA-Z]{2,}" />
     @if(!email.valid && (email.touched || contactForm.submitted)){
-    <span class="shake-animation absolute w-full text-center text-base  sm:text-lg text-red-500 bottom-[-22px] sm:bottom-[-30px]">Bitte gültige E-Maial-Adresse eingeben.</span>
+    <span class="shake-animation absolute w-full text-center text-base  sm:text-lg text-red-500 bottom-[-22px] sm:bottom-[-30px]">Bitte gültige E-Mail-Adresse eingeben.</span>
     } @else if (usersAlreadyExsits()) {
     <span class="shake-animation absolute w-full text-center text-base  sm:text-lg text-red-500 bottom-[-22px] sm:bottom-[-30px]">E-Mail existiert bereits.</span>
     }
