--- a/src/app/components/landing-page/register/register.component.html
+++ b/src/app/components/landing-page/register/register.component.html
@@ -25,7 +25,7 @@
       [(ngModel)]="registerData.name" name="name" required />
     @if(!name.valid && (name.touched || contactForm.submitted)){
     <span
-      class="shake-animation absolute w-full text-center text-base  sm:text-lg text-red-500 bottom-[-22px] sm:bottom-[-30px]">Bitte Namen eingeben (Min. 3 Buchstaben).</span>
+      class="shake-animation absolute w-full text-center text-base  sm:text-lg text-red-500 bottom-[-22px] sm:bottom-[-30px]">Bitte Namen eingeben.</span>
     }
   </div>
 
@@ -38,7 +38,7 @@
       [(ngModel)]="registerData.email" name="email" required
       pattern="[a-zA-Z0-9._%+\-]+@[a-zA-Z0-9.\-]+\.[a-zA-Z]{2,}" />
     @if(!email.valid && (email.touched || contactForm.submitted)){
-    <span class="shake-animation absolute w-full text-center text-base  sm:text-lg text-red-500 bottom-[-22px] sm:bottom-[-30px]">Bitte gültige E-Mail-Adresse eingeben.</span>
+    <span class="shake-animation absolute w-full text-center text-base  sm:text-lg text-red-500 bottom-[-22px] sm:bottom-[-30px]">Bitte gültige E-Mail eingeben.</span>
     } @else if (usersAlreadyExsits()) {
     <span class="shake-animation absolute w-full text-center text-base  sm:text-lg text-red-500 bottom-[-22px] sm:bottom-[-30px]">E-Mail existiert bereits.</span>
     }
@@ -65,7 +65,7 @@
     <span>Ich stimme der <a class="text-purple1" href="privacy">Datenschutzerklärung</a> zu.</span>
   </div>
 
-  @if (name.valid && email.valid && password.valid && !checkboxError && !usersAlreadyExsits()) {
+  @if (name.valid && email.valid && password.valid && checkbox && !usersAlreadyExsits()) {
     <button type="submit" (click)="checkCheckbox()"
       class="w-28 h-14 cursor-pointer self-end text-white rounded-[30px] hover:scale-[1.1] active:scale-[0.9] duration-150 bg-purple1">
       Weiter
