Fix: Mainpage responsiveness

--- a/src/app/components/shared/popUp/message-options/message-options.component.html
+++ b/src/app/components/shared/popUp/message-options/message-options.component.html
@@ -5,12 +5,12 @@
     @if (chatType !== 'thread') {
         <button class="flex items-center justify-center transition-all rounded-full size-10 hover:bg-primary" (click)="openThread(); navService.openThread();"><img class="size-5" src="assets/icons/open_thread.svg" alt=""></button>
     }
-    @if (messageFromCurrentUser) {
+    @if (usersService.fromCurrentUser(message.sender)) {
         <div class="relative">
             <button class="flex items-center justify-center transition-all rounded-full size-10 hover:bg-primary [&~p]:hover:opacity-100"
                     (click)="onEditClick()">
                     <img class="size-5" src="assets/icons/more_vert.svg" alt=""></button>
-            <p class="py-[10px] px-[20px] drop-shadow-[0px_6px_14px_rgba(0,0,0,0.2)] absolute left-[75%] top-[50%] opacity-0 transition-all w-max bg-white rounded-[30px] rounded-ss-none">Nachricht bearbeiten</p>
+            <p class="py-[10px] px-[20px] drop-shadow-[0px_6px_14px_rgba(0,0,0,0.2)] absolute right-[75%] s:left-[75%] s:top-[50%] opacity-0 transition-all w-max bg-white rounded-[30px] rounded-se-none s:rounded-se-[30px] s:rounded-ss-none">Nachricht bearbeiten</p>
         </div>
     }
 </section>
