--- a/src/app/components/main-page/channel/channel.component.html
+++ b/src/app/components/main-page/channel/channel.component.html
@@ -1,5 +1,5 @@
 <app-chat-header [chatType]="'channel'" class="mb-[10px]"></app-chat-header>
-<div class="flex flex-1 w-full overflow-y-auto">
+<div class="flex flex-1 w-full overflow-x-hidden overflow-y-scroll">
   <app-chat-messages class="flex flex-col w-full" [messages]="messageService.messages()"
     [chatType]="'channel'"></app-chat-messages>
 </div>
