--- a/src/app/components/main-page/direct-message/direct-message.component.html
+++ b/src/app/components/main-page/direct-message/direct-message.component.html
@@ -1,5 +1,5 @@
 <app-chat-header [chatType]="'dm'" class="mb-[10px]"></app-chat-header>
-<div class="flex flex-col flex-1 w-full overflow-y-auto">
+<div class="flex flex-col flex-1 w-full overflow-x-hidden overflow-y-scroll">
     <app-chat-messages class="flex flex-col w-full" [messages]="dmService.directMessage.content"
         [chatType]="'dm'"></app-chat-messages>
         <div class="flex flex-col gap-6 px-4 pt-4 ml-4">
