--- a/src/app/components/main-page/thread/thread.component.html
+++ b/src/app/components/main-page/thread/thread.component.html
@@ -1,7 +1,7 @@
 <section class="flex flex-col w-full h-full bg-white rounded-[30px] pb-4">
     <app-chat-header [chatType]="'thread'" class="mb-[10px]"></app-chat-header>
     
-    <div class="flex flex-col flex-1 w-full overflow-y-auto">
+    <div class="flex flex-col flex-1 w-full overflow-x-hidden overflow-y-scroll">
 
         <div class="flex gap-5 mt-[25px] px-4" [ngClass]="{ 'flex-row-reverse': userService.fromCurrentUser(getUserFromService().sender)}">
             <div class="w-max">
