--- a/src/app/components/landing-page/splash-screen/splash-screen.component.html
+++ b/src/app/components/landing-page/splash-screen/splash-screen.component.html
@@ -1,6 +1,8 @@
-<div id="splash-screen" *ngIf="showSplash"
+<!-- <div id="splash-screen" *ngIf="showSplash"
   class="fixed inset-0 z-[1000] flex items-center justify-center bg-gradient-to-b from-[#6368cd] to-[#363FE5] overflow-hidden transition-opacity duration-1000"
   [ngClass]="{ 'opacity-0': !showSplash, 'opacity-100': showSplash }">
+
+
   <div
     class="flex items-center justify-center text-white animate-containerMoveMobile md:animate-containerMoveDesktop delay-[2000ms] md:delay-[1000ms]">
     <img src="assets/icons/Logo.png" alt="DA-Bubble Logo" class="w-auto h-[100px] max-[500px]:h-[70px]" />
@@ -13,4 +15,18 @@
 
 
   </div>
-</div>
+</div> -->
+
+
+
+
+<section class="relative flex items-center justify-center w-full h-screen bg-gradient-to-b from-[#6368cd] to-[#363FE5]">
+
+
+  <div class="absolute flex items-center justify-center h-[70px] gap-4 text-3xl animate-container size-fit">
+    <img src="assets/icons/Logo.png" alt="DA-Bubble Logo" class="z-10 h-full animate-logo" />
+    <h1 class="font-bold text-white animate-text">DABubble</h1>
+  </div>
+
+
+</section>
